src/program-specification-management/main/objects/Credential__c/Credential__c.object-meta.xml
<CustomObject>
    <label>Credential</label>
    <nameField>
        <label>Credential Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credentials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>