src/program-specification-management/main/objects/Credential__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course</label>
    <referenceTo>hed__Course__c</referenceTo>
    <relationshipLabel>Credentials</relationshipLabel>
    <relationshipName>Credentials</relationshipName>
    <type>Lookup</type>
</CustomField>