src/program-specification-management/main/objects/Credential__c/fields/Credential_Type__c.field-meta.xml
<CustomField>
    <fullName>Credential_Type__c</fullName>
    <label>Credential Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Certificate of Attendance</fullName>
            </value>
            <value>
                <fullName>Certificate of Participation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>