src/program-specification-management/main/objects/Credential__c/fields/Program_Plan__c.field-meta.xml
<CustomField>
    <fullName>Program_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Plan</label>
    <referenceTo>hed__Program_Plan__c</referenceTo>
    <relationshipLabel>Credentials</relationshipLabel>
    <relationshipName>Credentials</relationshipName>
    <type>Lookup</type>
</CustomField>